--- a/css/style.css
+++ b/css/style.css
@@ -79,9 +79,36 @@ a, a:visited, a:focus {
   stroke-width:2;
 }
 
+.unhighlight {
+  opacity: 0.7;
+}
+
 .highlight .pill-outline{
   stroke: black;
   stroke-width:2;
+}
+
+.start-city.highlight {
+  stroke-width:1;
+}
+
+.start-city.unhighlight {
+  opacity: 0.4;
+}
+
+.zoom {
+  cursor: pointer;
+  text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
+  text-shadow: 3px 3px 2px rgba(150, 150, 150, 1);
+
+}
+
+.zoom:hover {
+  opacity: 0.8;
+}
+
+.city-title {
+  cursor: default;
 }
 
 #footer {
